# haskell-ricochet

./: .gitignore  CONTRIBUTING.adoc  Readme.adoc  Setup.hs  default.nix  haskell-ricochet.cabal  shell.nix  torrc
doc/: proposal-2015-12-15.md
nix/: hprotoc.nix  network-anonymous-tor.nix  protocol-buffers-descriptor.nix  protocol-buffers.nix  shell.nix
src/Demo/: Client.hs  Querschlaeger.hs  Server.hs
src/Network/: Ricochet.hs
src/Network/Ricochet/: Channel.hs  Connection.hs  Crypto.hs  Monad.hs  Types.hs  Util.hs  Version.hs
src/Network/Ricochet/Crypto/: RSA.hsc
src/Network/Ricochet/Protocol/: AuthHiddenService.proto  Lowest.hs  Packets.hs  Protobuf.hs  Version.hs
src/Network/Ricochet/Protocol/Data/: AuthHiddenService.hs  Chat.hs  ContactRequest.hs  Control.hs
src/Network/Ricochet/Protocol/Data/AuthHiddenService/: Packet.hs  Proof.hs  Result.hs
src/Network/Ricochet/Protocol/Data/Chat/: ChatAcknowledge.hs  ChatMessage.hs  Packet.hs
src/Network/Ricochet/Protocol/Data/ContactRequest/: ContactRequest.hs  Limits.hs  Response.hs
src/Network/Ricochet/Protocol/Data/ContactRequest/Response/: Status.hs
src/Network/Ricochet/Protocol/Data/Control/: ChannelResult.hs  EnableFeatures.hs  FeaturesEnabled.hs  KeepAlive.hs  OpenChannel.hs  Packet.hs
src/Network/Ricochet/Protocol/Data/Control/ChannelResult/: CommonError.hs
src/Network/Ricochet/Protocol/Protobuf/: AuthHiddenService.hs  Chat.hs  ContactRequest.hs  ControlChannel.hs
src/Network/Ricochet/Protocol/proto/: ContactRequestChannel.proto
test/: Main.hs
test/Network/Ricochet/Testing/: Crypto.hs  General.hs  Instances.hs
