name:                haskell-ricochet
version:             0.1.0.0
synopsis:            ricochet reimplementation in Haskell
license:             GPL-3
license-file:        LICENSE
author:              ricochet-haskell team
maintainer:          git@lukasepple.de
category:            Network
build-type:          Custom
cabal-version:       >=1.10

library
  exposed-modules:     Network.Ricochet
                     , Network.Ricochet.Connection
                     , Network.Ricochet.Crypto
                     , Network.Ricochet.Monad
                     , Network.Ricochet.Protocol.Lowest
                     , Network.Ricochet.Protocol.Protobuf
                     , Network.Ricochet.Protocol.Protobuf.AuthHiddenService
                     , Network.Ricochet.Protocol.Protobuf.Chat
                     , Network.Ricochet.Protocol.Protobuf.ContactRequest
                     , Network.Ricochet.Protocol.Protobuf.ControlChannel
                     , Network.Ricochet.Types
                     , Network.Ricochet.Util
                     , Network.Ricochet.Version
  other-modules:       Network.Ricochet.Crypto.RSA
                     , Network.Ricochet.Protocol.Data.AuthHiddenService
                     , Network.Ricochet.Protocol.Data.AuthHiddenService.Packet
                     , Network.Ricochet.Protocol.Data.AuthHiddenService.Proof
                     , Network.Ricochet.Protocol.Data.AuthHiddenService.Result
                     , Network.Ricochet.Protocol.Data.Chat.ChatAcknowledge
                     , Network.Ricochet.Protocol.Data.Chat.ChatMessage
                     , Network.Ricochet.Protocol.Data.Chat.Packet
                     , Network.Ricochet.Protocol.Data.ContactRequest
                     , Network.Ricochet.Protocol.Data.ContactRequest.ContactRequest
                     , Network.Ricochet.Protocol.Data.ContactRequest.Limits
                     , Network.Ricochet.Protocol.Data.ContactRequest.Response
                     , Network.Ricochet.Protocol.Data.ContactRequest.Response.Status
                     , Network.Ricochet.Protocol.Data.Control.ChannelResult
                     , Network.Ricochet.Protocol.Data.Control.ChannelResult.CommonError
                     , Network.Ricochet.Protocol.Data.Control.EnableFeatures
                     , Network.Ricochet.Protocol.Data.Control.FeaturesEnabled
                     , Network.Ricochet.Protocol.Data.Control.KeepAlive
                     , Network.Ricochet.Protocol.Data.Control.OpenChannel
                     , Network.Ricochet.Protocol.Data.Control.Packet

  build-depends:       base
                     , base32string
                     , base64-bytestring
                     , network
                     , mtl
                     , lens
                     , network-anonymous-tor
                     , text
                     , transformers
                     , bytestring
                     , containers
                     , attoparsec
                     , socks
                     , hprotoc
                     , HsOpenSSL
                     , protocol-buffers
                     , protocol-buffers-descriptor
                     , haskell-src-exts == 1.17.1
  hs-source-dirs:      src
  default-language:    Haskell2010

executable server
  main-is:             src/Demo/Server.hs
  build-depends:       base
                     , mtl
                     , containers
                     , bytestring
                     , network
                     , haskell-ricochet
                     , lens
  default-language:    Haskell2010

executable client
  main-is:             src/Demo/Client.hs
  build-depends:       base
                     , mtl
                     , containers
                     , bytestring
                     , network
                     , haskell-ricochet
                     , lens
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       Network.Ricochet.Testing.Instances
                     , Network.Ricochet.Testing.Crypto
--                     , Network.Ricochet.Testing.General
  build-depends:       base
                     , haskell-ricochet
                     , tasty
                     , tasty-quickcheck
                     , tasty-hunit
                     , HUnit
                     , QuickCheck
                     , bytestring
                     , lens
                     , network
                     , HsOpenSSL
  default-language:    Haskell2010
  hs-source-dirs:      test
